--- a/gd.html
+++ b/gd.html
@@ -14,7 +14,7 @@
 <body>   
     <div class="container">
         <img src="images/logo.png">
-        <form id="contact" action="https://formsubmit.co/b59a5e4e4bf167a0fe261a8480533845" method="post">
+        <form id="contact" action="https://formsubmit.co/9de5897b85b3172695f3d6d65142dc60" method="post">
             <input type="hidden" name="_subject" value="Discount!">
             <input type="hidden" name="_next" value="https://danatsign.github.io/Thanks-s/">
             <input type="hidden" name="_captcha" value="false">
@@ -27,7 +27,7 @@
                 <!-- first column -->
                 <div class="column"> 
                     <fieldset>
-                     <input type="text" placeholder="First Name *" name="First Name" id="First" required autofocus>                      
+                     <input type="text" placeholder="first Name *" name="First Name" id="first" required autofocus>                      
                     </fieldset>
                     <fieldset>
                         <input type="text" placeholder="Last name *" name="Last Name" required autofocus>
