--- a/gd.html
+++ b/gd.html
@@ -16,7 +16,7 @@
         <img src="images/logo.png">
         <form id="contact" action="https://formsubmit.co/b59a5e4e4bf167a0fe261a8480533845" method="post">
             <input type="hidden" name="_subject" value="Discount!">
-            <input type="hidden" name="_next" value="https://danatthankyouforregeist48.on.drv.tw/edited%20project/in.html">
+            <input type="hidden" name="_next" value="https://danatsign.github.io/Thanks-s/">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_template" value="table">           
             <input type="hidden" name="_autoresponse" value="Congratulations!
