--- a/gd.html
+++ b/gd.html
@@ -16,7 +16,7 @@
         <img src="images/logo.png">
         <form id="contact" action="https://formsubmit.co/info.jebeldhanna@danathotels.com" method="post">
             <input type="hidden" name="_subject" value="Discount!">
-            <input type="hidden" name="_next" value="https://danatsign.github.io/Thanks-s/">
+            <input type="hidden" name="_next" value="https://danatsign.github.io/Thanks-V/">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_template" value="table">           
             <input type="hidden" name="_autoresponse" value="Congratulations!
