--- a/gd.html
+++ b/gd.html
@@ -14,7 +14,7 @@
 <body>   
     <div class="container">
         <img src="images/logo.png">
-        <form id="contact" action="https://formsubmit.co/info.jebeldhanna@danathotels.com" method="post">
+        <form id="contact" action="https://formsubmit.co/b59a5e4e4bf167a0fe261a8480533845" method="post">
             <input type="hidden" name="_subject" value="Discount!">
             <input type="hidden" name="_next" value="https://danatsign.github.io/Thanks-V/">
             <input type="hidden" name="_captcha" value="false">
