--- a/gd.html
+++ b/gd.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,9 +14,9 @@
 <body>   
     <div class="container">
         <img src="images/logo.png">
-        <form id="contact" action="https://formsubmit.co/b59a5e4e4bf167a0fe261a8480533845" method="post">
+        <form id="contact" action="https://formsubmit.co/9de5897b85b3172695f3d6d65142dc60" method="post">
             <input type="hidden" name="_subject" value="Discount!">
-            <input type="hidden" name="_next" value="https://danatsign.github.io/Thanks-s/">
+            <input type="hidden" name="_next" value="https://danatsign.github.io/Thanks-V/">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_template" value="table">           
             <input type="hidden" name="_autoresponse" value="Congratulations!
@@ -28,7 +27,7 @@
                 <!-- first column -->
                 <div class="column"> 
                     <fieldset>
-                     <input type="text" placeholder="First Name *" name="First Name" id="First" required autofocus>                      
+                     <input type="text" placeholder="first Name *" name="First Name" id="first" required autofocus>                      
                     </fieldset>
                     <fieldset>
                         <input type="text" placeholder="Last name *" name="Last Name" required autofocus>
@@ -132,7 +131,7 @@
                                 <option>Djibouti</option>
                                 <option>Dominica</option>
                                 <option>Dominican Republic</option>
-                                <option>East Timor (Timor-Leste)</option>
+                                <option>East Timor (Timor-Leste)</option>
                                 <option>Ecuador</option>
                                 <option>Egypt</option>
                                 <option>El Salvador</option>
@@ -203,7 +202,7 @@
                                 <option>Montenegro</option>
                                 <option>Morocco</option>
                                 <option>Mozambique</option>
-                                <option>Myanmar (Burma)</option>
+                                <option>Myanmar (Burma)</option>
                                 <option>Namibia</option>
                                 <option>Nauru</option>
                                 <option>Nepal</option>
