--- a/gd.html
+++ b/gd.html
@@ -14,9 +14,9 @@
 <body>   
     <div class="container">
         <img src="images/logo.png">
-        <form id="contact" action="https://formsubmit.co/9de5897b85b3172695f3d6d65142dc60" method="post">
+        <form id="contact" action="https://formsubmit.co/d7a36f0438b2ad31104e7a3461af0ba9" method="post">
             <input type="hidden" name="_subject" value="Discount!">
-            <input type="hidden" name="_next" value="https://danatsign.github.io/Thanks-V/">
+            <input type="hidden" name="_next" value="https://danatsign.github.io/Thanks-s/">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_template" value="table">           
             <input type="hidden" name="_autoresponse" value="Congratulations!
